--- a/Setupu0.plist
+++ b/Setupu0.plist
@@ -11,13 +11,13 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string> https://drive.google.com/file/d/1EWREwjZkk2WZenDCaK8DtMbyQhu9tiP3/view?usp=sharing</string>
+					<string>https://drive.google.com/file/d/1EWREwjZkk2WZenDCaK8DtMbyQhu9tiP3/view?usp=sharing</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.unc0ver</string>
+				<string>com.nekki.shadowfight</string>
 				<key>bundle-version</key>
 				<string>6.1.1</string>
 				<key>kind</key>
