--- a/Setupu0.plist
+++ b/Setupu0.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://drive.google.com/file/d/1EWREwjZkk2WZenDCaK8DtMbyQhu9tiP3/view?usp=sharing</string>
+					<string>https://drive.google.com/file/d/1mJ0fQq1GLM9kQKiCCyeG7M9Hn5ogIWMW/view?usp=sharing/view?usp=sharing</string>
 				</dict>
 			</array>
 			<key>metadata</key>
