--- a/Setupu0.plist
+++ b/Setupu0.plist
@@ -11,13 +11,13 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://drive.google.com/file/d/1mJ0fQq1GLM9kQKiCCyeG7M9Hn5ogIWMW/view?usp=sharing/view?usp=sharing</string>
+					<string>https://github.com/IJustNeedOffsets/InstallerID/raw/main/delta%20(1).ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.nekki.shadowfight</string>
+				<string>com.nekki.shadowfigh22222t</string>
 				<key>bundle-version</key>
 				<string>6.1.1</string>
 				<key>kind</key>
