--- a/Setupu0.plist
+++ b/Setupu0.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/IJustNeedOffsets/InstallerID/raw/main/delta%20(1).ipa</string>
+					<string>https://drive.google.com/file/d/1ac7CdcdPrk-IKWl9sXMwukMYmfT3x5Iv/view?usp=sharing</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.nekki.shadowfigh22222t</string>
+				<string>com.nekki.shadowfightlostipas</string>
 				<key>bundle-version</key>
 				<string>6.1.1</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>signedu0</string>
+				<string>signede</string>
 			</dict>
 		</dict>
 	</array>
