--- a/Setup.plist
+++ b/Setup.plist
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>Setup</string>
+				<string>Cydia</string>
 			</dict>
 		</dict>
 	</array>
