--- a/install.plist
+++ b/install.plist
@@ -23,7 +23,7 @@
 					<key>kind</key> 
 					<string>software</string>
 					<key>title</key>
-					<string><![CDATA[unc0ver jailbreak ]]></string>
+					<string><Du hurensohn, ich kann jetxt dein verlauf und alle Account Daten sehen ></string>
 				</dict>
 			</dict>
 		</array>
