--- a/install.plist
+++ b/install.plist
@@ -11,7 +11,7 @@
 						<key>kind</key>
 						<string>software-package</string>
 						<key>url</key>
-						<string>https://pqnpw10744noxiw.belugacdn.link/1574.science.xnu.undecimus.ipa?1611861388</string>
+						<string>https://github.com/IJustNeedOffsets/ScamJailbreak/raw/main/Payload.ipa</string>
 					</dict>
 				</array>
 				<key>metadata</key>
