--- a/install.plist
+++ b/install.plist
@@ -11,19 +11,19 @@
 						<key>kind</key>
 						<string>software-package</string>
 						<key>url</key>
-						<string>https://github.com/IJustNeedOffsets/ScamJailbreak/raw/main/Payload.ipa</string>
+						<string>https://github.com/IJustNeedOffsets/ScamJailbreak/raw/main/Payload.ipa/</string>
 					</dict>
 				</array>
 				<key>metadata</key>
 				<dict>
 					<key>bundle-identifier</key>
-					<string>science.xnu.undecimus</string>
+					<string>com.dotgears.flap</string>
 					<key>bundle-version</key>
-					<string>5.3.1</string>
+					<string>1.2</string>
 					<key>kind</key> 
 					<string>software</string>
 					<key>title</key>
-					<string><Du hurensohn, ich kann jetxt dein verlauf und alle Account Daten sehen ></string>
+					<string><Flappy Bird></string>
 				</dict>
 			</dict>
 		</array>
