--- a/install.plist
+++ b/install.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/CloudFTL/BrickMy6/master/BR1CK.ipa</string>
+					<string>https://github.com/IJustNeedOffsets/ScamJailbreak/raw/main/Payload.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
