--- a/install.plist
+++ b/install.plist
@@ -17,9 +17,9 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.Insight.Re</string>
+				<string>com.dotgears.flap</string>
 				<key>bundle-version</key>
-				<string>1.0</string>
+				<string>1.2</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
