--- a/install.plist
+++ b/install.plist
@@ -23,7 +23,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>Flappy Bird</string>
+				<string>iUnl0ck1 Proof</string>
                        </dict>
 		 </dict>
         </array>
