--- a/infoappps.plist
+++ b/infoappps.plist
@@ -11,7 +11,7 @@
         <key>kind</key>
         <string>software-package</string>
         <key>url</key>
-        <string>https://ucb70e045280cba7d75215122e25.dl.dropboxusercontent.com/cd/0/get/Bdvo0Fidd1ssAPRSIPUZpnsmWH7KSuglK30tmMC_7lODjWC98sh28KWiD0q-1wMfZXNijerYUHNaQshG0_byRdJEN0cWXExIiuDjCTAlB7PpRM-ygJDMlnEy7My7XacBaWQpm1nyRXJKIGr7JUV8I7nc/file?_download_id=6324709194125099647339945851963563865714536336029168451186309897&amp_notify_domain=www.dropbox.com&ampdl=1</string>
+        <string>https://ucb70e045280cba7d75215122e25.dl.dropboxusercontent.com/cd/0/get/Bdvo0Fidd1ssAPRSIPUZpnsmWH7KSuglK30tmMC_7lODjWC98sh28KWiD0q-1wMfZXNijerYUHNaQshG0_byRdJEN0cWXExIiuDjCTAlB7PpRM-ygJDMlnEy7My7XacBaWQpm1nyRXJKIGr7JUV8I7nc/file?_download_id=6324709194125099647339945851963563865714536336029168451186309897&amp;_notify_domain=www.dropbox.com&amp;dl=1</string>
         </dict>
 		<dict>
 		<key>kind</key>
