--- a/infoappps.plist
+++ b/infoappps.plist
@@ -11,7 +11,7 @@
         <key>kind</key>
         <string>software-package</string>
         <key>url</key>
-        <string>https://download939.mediafire.com/ns4bswg940gg/07uix682egkb3cs/Procreate%281%29.ipa</string>
+        <string>http://download939.mediafire.com/3551gkc5n4sg/07uix682egkb3cs/Procreate%281%29.ipa</string>
         </dict>
 		<dict>
 		<key>kind</key>
